# automakeCh3

./: README.md  readme
jupiter/: :wq  Makefile  Makefile.am  Makefile.in  autogen.sh  bk_steps  build_log  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac_1  configure.ac_2  configure_bk.ac  configure_test.ac  libtool  script.sh  steps  tags  unistd.h
jupiter/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
jupiter/common/: Makefile  Makefile.am  Makefile.in  jupcommon.h  libjupcommon.la  libjupcommon_la-print.lo  print.c
jupiter/common/.deps/: libjupcommon_a-print.Po  libjupcommon_la-print.Plo  print.Plo  print.Po
jupiter/include/: Makefile  Makefile.am  Makefile.in  libjupiter.h
jupiter/jupiter-1.0/: Makefile.in
jupiter/libjup/: Makefile  Makefile.am  Makefile.in  jup_print.c  libjupiter.la  libjupiter_la-jup_print.lo
jupiter/libjup/.deps/: libjupiter_la-jup_print.Plo
jupiter/libjup/.libs/: libjupiter.lai  libjupiter.so.0.0.0
jupiter/src/: Makefile  Makefile.am  Makefile.in  greptest.sh  jupiter  main.c  module.h
jupiter/src/modules/hithere/: hithere.c  steps
jupiter/tmp/: Makefile  Makefile.am  Makefile.in  configure.ac
jupiter/tmp/autom4te.cache/: requests
